--- a/src/drivers/mmc/Kconfig
+++ b/src/drivers/mmc/Kconfig
@@ -11,7 +11,16 @@ menuconfig MMC
 
 	  If you want MMC/SD/SDIO support, you should say Y here and
 	  also to your specific host controller driver.
+#/* WR 6/5/2017 Start */
+config MMC_LOCK
+	bool "MMC/SD password based card lock/unlock"
+	depends on MMC != n
+	select KEYS
+	help
+	  This will add the ability to lock/unlock SD and MMC cards.
 
+	  If unsure, say N.
+#/* WR 6/5/2017 End */
 config MMC_DEBUG
 	bool "MMC debugging"
 	depends on MMC != n
